[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Drop.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[node name="Drop" type="KinematicBody2D"]
position = Vector2( 20, -20 )
input_pickable = true
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2
mouse_default_cursor_shape = 2
color = Color( 0.427451, 0.866667, 0.929412, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_Drop_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Drop_mouse_exited"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
